fix: Remove unwanted horizontal scrollbar on blog posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@
   }
 
   .prose table {
-    @apply block overflow-x-auto whitespace-nowrap;
+    @apply block overflow-x-auto;
   }
 
   .prose code {
